# sckh

./: .gitignore  README.md  README_INSTALL  m_SCKH_resonant_PES_traj.F90  m_sckh_params_t.F90  pyproject.toml  streamlit_app.py
KH/: KH.f90  splines.f
KH/test/: KH.inp
SCKH/: Makefile  Makefile~  parameters.mod
SCKH_PES/: FFT_m.f90  KH_functions.f90  SCKH_functions.f90
SCKH_resonant/: FFT_m.f90  KH_functions.f90  Makefile  SCKH_resonant.f90
SCKH_resonant/test_new/: SCKH_resonant_SCKH.inp
XAS_nonadiabatic/: FFT_m.f90  KH.f90  Kramers-Heisenberg_scl.f90  SCKH_functions.f90  XAS_nonadiabatic.f90  m_XES_eigenstates.f90  m_test_XAS_nonadiabatic.f90  parameters.f90  qsort_c_module.f90  spline_m.f90
examples/sckh_pes/: .gitignore  dynamics.yaml  run_example.py
sinc_DVR/test/: sinc_DVR.inp  sinc_DVR_manual.txt
src/: CMakeLists.txt  CMakeLists.txt~  check_e_mean.F90  hist_class.F90  m_FFT.F90  m_KH.F90  m_KH_functions.F90  m_KH_utils.F90  m_PES_io.F90  m_SCKH.F90  m_SCKH_PES.F90  m_SCKH_nonadiabatic.F90  m_SCKH_resonant.F90  m_SCKH_resonant_PES.F90  m_SCKH_resonant_PES_FC.F90  m_SCKH_utils.F90  m_SCKH_utils_res.F90  m_SCXAS_PES.F90  m_XAS_eigenstates.F90  m_XAS_functions.F90  m_algebra.F90  m_broaden_rixs.F90  m_check_e_mean.F90  m_color.F90  m_constants.F90  m_constants.F90~  m_convolution.F90  m_crank_nicolson.F90  m_fact.F90  m_fftw3.F90  m_fourier_grid.F90  m_func.F90  m_input.F90  m_log.F90  m_log_type.F90  m_ode_solvers.F90  m_overlaps.F90  m_precision.F90  m_rixs_io.F90  m_rkf45_matrix.F90  (+14 more)
src/python_scripts/: dynamics_2d.py
src/python_scripts/dynamics_1d/: __init__.py  config.py  constants.py  dipole.py  integrators.py  io.py  pes.py  sampling.py  spectrum.py  spectrum_config.py  trajectory.py  vibrational.py
src/python_scripts/dynamics_2d/: __init__.py  config.py  dipole.py  integrators.py  io.py  pes.py  sampling.py  spectrum.py  trajectory.py  vibrational.py
src/python_scripts/kh_1d/: __init__.py  amplitude.py  config.py  dipole_matrix.py  spectrum.py
src/python_scripts/surface_tracking/: __init__.py  bfs.py  config.py  cost.py  diagnostics.py  phase.py  sweeps.py  tracking.py
src/python_scripts/tools/: README.md  extract_dipoles_2dscan.py
tests/: README  test_dynamics_2d.py  test_dynamics_2d_func.py  test_spectrum_2d.py
tests/KH/: README
tests/test_dynamics_1d/: __init__.py  conftest.py  test_dipole.py  test_integration.py  test_integrators.py  test_pes.py  test_sampling.py  test_spectrum.py  test_trajectory.py  test_vibrational.py
tests/test_dynamics_2d/: __init__.py  conftest.py  test_integrators.py  test_io_surfaces.py  test_pes.py  test_trajectory.py
tests/test_kh_1d/: __init__.py  conftest.py  test_amplitude.py  test_dipole_matrix.py  test_spectrum.py
tests/test_surface_tracking/: conftest.py  test_bfs.py  test_cost.py  test_diagnostics.py  test_phase.py  test_sweeps.py  test_tracking.py
tests/testsuite/: README  run_tests.py
utils/DVR_PO/: DVR_PO.f90
utils/KH/: CMakeLists.txt  KH  KH.f90  KH.f90~  KH_functions.f90  Makefile  kh_functions.mod  parameters.mod
utils/SCKH/: CMakeLists.txt  CMakeLists.txt~  SCKH  SCKH.f90
utils/SCKH_PES/: #SCKH_PES.f90#  CMakeLists.txt  FFT_m.f90~  KH_functions.f90~  Makefile  Makefile~  SCKH.f90~  SCKH_PES  SCKH_PES.f90  SCKH_functions.f90~  fft_m.mod  hist_class.mod  kh_functions.mod  parameters.mod  sckh_functions.mod  spline_easy.f90  spline_m.mod
utils/SCKH_resonant/: #Makefile#  FFT_m.f90~  Kramers-Heisenberg_resonant.f90  Makefile~  SCKH.f90  SCKH_PES  SCKH_PES.f90~  SCKH_functions.f90  SCKH_functions.f90~  SCKH_resonant  SCKH_resonant.f90~  fft_m.mod  hist_class.f90  hist_class.mod  kh_functions.mod  linspace.f90  m_SCKH_types.F90  m_SCKH_types.F90~  parameters.mod  sckh_functions.mod  spline_m.f90~  spline_m.mod
utils/XAS_nonadiabatic/: #m_XES_eigenstates.f90#  .#m_XES_eigenstates.f90  CMakeLists.txt  FFT_m.f90~  KH  KH.f90~  KH_functions.f90  KH_functions.f90~  KH_manual.txt~  Makefile  Makefile~  SCKH_functions.f90~  XAS_nonadiabatic  XAS_nonadiabatic.f90~  fft_m.mod  fort.10.gnu  fort.10.gnu~  fort.10.ps  hist_class.mod  kh_functions.mod  m_SCKH_PES.f90  m_SCKH_PES.f90~  m_SCXAS_PES.f90  m_SCXAS_PES.f90~  m_XAS_eigenstates.f90  m_XAS_eigenstates.f90~  m_XAS_functions.f90  m_XAS_functions.f90~  m_XAS_input.f90  m_XAS_io.f90  m_XAS_io.f90~  m_XAS_nonadiabatic.f90  m_XES_eigenstates.f90~  m_sckh_pes.mod  m_scxas_pes.mod  m_test_XAS_nonadiabatic.f90~  m_test_xas_nonadiabatic.mod  m_xas_eigenstates.mod  m_xas_functions.mod  m_xas_io.mod  (+6 more)
utils/ase_interface_pjt2/: README  README~  h2o_pjt2.pyf  h2o_pjt2.pyf~  h2o_pjt2_calculator.py  h2o_pjt2_calculator.py~  mc.py  mc_utils.py  test_mc.py  test_pjt2.py  test_pjt2.py~
utils/fourier_grid/: m_algebra.F90  m_fourier_grid.F90  m_fourier_grid.F90~  test_fourier_grid.F90
utils/ode_solver/: CMakeLists.txt  m_define_macro.F90  m_func.F90  m_func_time_ordered_exp.F90  m_precision.F90  m_rkf45_matrix.F90  m_rkf45_matrix.F90~  test_matrix_eq.F90
utils/python_tools/: eigenfunctions.py  sample_funcs.py  test_eigenfun.py  test_thermal.py
utils/sinc_DVR/: KH_functions.f90  Makefile  Makefile~  kh_functions.mod  parameters.mod  sinc_DVR  sinc_DVR.f90  sinc_DVR.f90~  spline_m.mod
utils/vib_numerical/: Makefile  Makefile.old  Makefile~  convert_normal_to_internal.f90~  convert_normal_to_internal.x  eigenfunctions.f90  eigenfunctions.f90~  fit_poly_surface.f90~  mat_elem_xn.f90  mat_elem_xn.f90~  monomer_scan_3d_tennyson.dat~  monomer_scan_3d_tennyson_hod.dat.big  monomer_scan_3d_tennyson_hod.dat.small  monomer_scan_3d_tennyson_hod_0.5.dat.big  nmode.f90~  nmode.out  octave-core  out  param.h  svdcmp.f  test.out  tmp.xyz  vib_finite_diff  vib_finite_diff.f90  vib_finite_diff.f90~  vib_finite_diff.inp~  vib_finite_diff.out  vib_finite_diff_intensities  vib_finite_diff_intensities.f90~  vib_finite_diff_subr.f90  vib_finite_diff_subr.f90~  vib_harm.f90~  vib_harm.inp~  (+15 more)
vib_numerical/: Makefile  convert_normal_to_internal.f90  fit_poly_surface.f90  nmode.f90  vib_finite_diff.f90  vib_finite_diff_intensities.f90  vib_harm.f90  vib_harm2.f90
(+513 files in other folders)
